Added ValidationEngine.validate(object, errors, prefix) method.